--- a/src/select-virtualized/Select.stories.css
+++ b/src/select-virtualized/Select.stories.css
@@ -1,3 +1,16 @@
 .react-select-virtualized {
   font-family: monospace;
 }
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
