--- a/src/select-virtualized/styles.css
+++ b/src/select-virtualized/styles.css
@@ -7,12 +7,30 @@
   background: white;
 }
 
-.flat-virtualized-item div {
+.flat-virtualized-item {
   cursor: pointer;
+  background-color: transparent;
+  user-select: none;
+  box-sizing: border-box;
+  display: flex;
 }
 
+.flat-virtualized-item > div{
+  width: 100%;
+  height: 100%;
+}
+
+.flat-virtualized-item-option {
+  padding-left: 1em;
+  text-overflow: ellipsis;
+  height: 100%;
+}
+
+
 .flat-virtualized-item-focused {
-  font-weight: bold;
+  background-color: #DEEBFF;
+  user-select: none;
+  box-sizing: border-box;
 }
 
 .grouped-virtualized-list-item div[role="option"]{
